fixed header overlap issues

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,19 +13,21 @@
  }
  
  .logo-image {
-     height: 190%;
-     position: relative;
+     height: auto;
+     max-height: 60px;
      border-radius: 5px;
+     margin-right: 2rem; 
  }
  
  .main-nav {
      display: flex;
      justify-content: center;
      position: relative;
-     right: 5rem;
-     top: .45rem;
      gap: 25px;
- }
+     top: .45rem;
+     flex-shrink: 1;
+     min-width: 0;
+}
  
  .header-right {
      position: absolute;
